--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -33,32 +33,47 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "347bb60f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25e9e64b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e71c8926",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "da94cc56",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0       4\n",
-       "1       4\n",
-       "2       4\n",
-       "3       4\n",
-       "4       4\n",
-       "       ..\n",
-       "1506    3\n",
-       "1507    3\n",
-       "1508    3\n",
-       "1509    3\n",
-       "1510    3\n",
-       "Name: Date, Length: 1511, dtype: int32"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "class StockPredictor(nn.Module):\n",
+    "    def __init__(self, input_size, hidden_size, output_size):\n",
+    "        super(StockPredictor, self).__init__()\n",
+    "        self.lstm = nn.LSTM(input_size, hidden_size, batch_first=True)\n",
+    "        self.fc = nn.Linear(hidden_size, output_size)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        out, _ = self.lstm(x)\n",
+    "        out = self.fc(out[:, -1, :])\n",
+    "        return out"
+   ]
   },
   {
    "cell_type": "code",
@@ -66,7 +81,22 @@
    "id": "2c3c9ebc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "epochs = 100\n",
+    "learning_rate = 0.001\n",
+    "criterion = nn.MSELoss()\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)\n",
+    "for epoch in range(epochs):\n",
+    "    model.train()\n",
+    "    optimizer.zero_grad()\n",
+    "    outputs = model(train_x)\n",
+    "    loss = criterion(outputs, train_y)\n",
+    "    loss.backward()\n",
+    "    optimizer.step()\n",
+    "    \n",
+    "    if (epoch+1) % 10 == 0:\n",
+    "        print(f'Epoch [{epoch+1}/{epochs}], Loss: {loss.item():.4f}')"
+   ]
   }
  ],
  "metadata": {
